samples/_failures_safe/1761439773_3fa8e2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_33856cee.c: In function ‘main’:
./samples/SAFE/__tmp_33856cee.c:151:52: error: expected ‘)’ at end of input
  151 |     printf("Decompressed successfully: %s\n", (char
      |                                               ~    ^
      |                                                    )
./samples/SAFE/__tmp_33856cee.c:151:5: error: expected declaration or statement at end of input
  151 |     printf("Decompressed successfully: %s\n", (char
      |     ^~~~~~
